# SDP-Practicum-Social-Network

./: CMakeLists.txt  Global.h  LICENSE  README.md  User.h  main.cpp  Социална Мрежа.docx
Commands/: AddUserCommand.h  BanCommand.h  Command.h  DeleteCommand.h  DelinkCommand.h  ExitCommand.h  FindCommand.h  LinkCommand.h  RecommendCommand.h  UnbanCommand.h
Data/: users.txt
Functionality/: AddUser.h  DeleteUser.h  Exit.h  FindUser.h  Invoker.h  LinkUsers.h  Recommend.h
Utils/: DynamicArray.h  DynamicGraph.h  Global.h  User.h
